padding fix(?) for h1 getting cut off by navbar on mobile screen sizes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,8 @@ h1, h2 {
 
 h1 {
     font-size: 5rem;
+    padding-top: 175px;
+    padding-bottom: 25px;
 }
 
 h2 {
